[BugFix:innerShadow] fix innerShadow on safari and firefox

--- a/web/assets/app/sass/blocs/_section.sass
+++ b/web/assets/app/sass/blocs/_section.sass
@@ -111,7 +111,7 @@
   .inner-shadow
     &:after
       height: 400px
-      background: linear-gradient(transparent, $gray)
+      background: linear-gradient(rgba($gray, 0.1), $gray)
   &.active
     .container__image
       animation: fade-in-up 0.8s cubic-bezier(0.4, 0.0, 0.2, 1) forwards
